adding svg files

--- a/character-sheet.html
+++ b/character-sheet.html
@@ -14,8 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header id="header">
+    <div id="top-div">
         <div id="name-div">
+            <img src="img/01.svg" id="ribbon" alt="ribbon" style="scale: 50%;">
             <span id="name" class="input"></span>
               <span class="label">Name</span>
         </div>
@@ -43,7 +44,10 @@
             <span id="subclass" class="input"></span>
               <span class="label">Subclass</span>
         </div>
-    </header>
+    </div>
+    <div id="left-div"></div>
+    <div id="middle-div"></div>
+    <div id="right-div"></div>
 
     <!--jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
